--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -15,3 +15,10 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          plugin_wakatime: yes
+          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
+          plugin_wakatime_days: 365
+          plugin_wakatime_sections: time, projects-graphs, languages-graphs, editors-graphs
+          plugin_wakatime_limit: 4
+          plugin_wakatime_url: http://wakapi.dev
+          plugin_wakatime_user: .user.login
