--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          config_timezone: Europe/Berlin
           base: header, activity, repositories
           plugin_lines: yes
           plugin_lines_history_limit: 5
