--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -25,7 +25,7 @@ jobs:
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
           plugin_wakatime_days: 365
-          plugin_wakatime_sections: time, projects-graphs, languages-graphs, editors-graphs
+          plugin_wakatime_sections: time, languages-graphs, editors-graphs
           plugin_wakatime_limit: 4
           plugin_wakatime_url: http://wakapi.dev
           plugin_wakatime_user: .user.login
