--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -27,5 +27,5 @@ jobs:
           plugin_wakatime_days: 365
           plugin_wakatime_sections: time, languages-graphs, editors-graphs
           plugin_wakatime_limit: 4
-          plugin_wakatime_url: http://wakapi.dev
+          plugin_wakatime_url: https://wakapi.chrotos.net
           plugin_wakatime_user: .user.login
