--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -28,4 +28,4 @@ jobs:
           plugin_wakatime_sections: time, languages-graphs, editors-graphs
           plugin_wakatime_limit: 4
           plugin_wakatime_url: https://wakapi.chrotos.net
-          plugin_wakatime_user: .user.login
+          plugin_wakatime_user: katzen48@chrotos.net
